# clash-protocols

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  LICENSE  README.md  cabal.project  clash-protocols.cabal  default.nix  flake.nix  format.sh  fourmolu.yaml  hie.yaml  shell.nix  stack.yaml
.ci/: apply_settings.sh  attic-auth.sh  build_docs.sh  cabal.project.local  cabal.project.local.in  setup.sh  test_cabal.sh  test_stack.sh  test_whitespace.sh
.ci/docker/: Dockerfile  build-and-publish-docker-image.sh
.github/workflows/: ci.yml
clash-protocols/: Setup.hs  clash-protocols.cabal
clash-protocols-base/: clash-protocols-base.cabal
clash-protocols-base/src/Protocols/: Circuit.hs  Cpp.hs  Internal.hs  Plugin.hs
clash-protocols-base/src/Protocols/Internal/: Classes.hs  TH.hs  Types.hs
clash-protocols-base/src/Protocols/Internal/Units/: TH.hs
clash-protocols-base/src/Protocols/Plugin/: Cpp.hs  Internal.hs  TH.hs  TaggedBundle.hs  Types.hs  Units.hs
clash-protocols-base/src/Protocols/Plugin/TaggedBundle/: TH.hs
clash-protocols-base/src/Protocols/Plugin/Units/: TH.hs
clash-protocols-base/src/Protocols/Protocol/: TH.hs
clash-protocols-experimental/: LICENSE  Setup.hs  clash-protocols-experimental.cabal
clash-protocols-experimental/src/Protocols/: BiDf.hs  ReqResp.hs
clash-protocols-experimental/src/Protocols/Df/: Extra.hs
clash-protocols-experimental/src/Protocols/Wishbone/: Extra.hs
clash-protocols-experimental/tests/: doctests.hs  unittests.hs
clash-protocols-experimental/tests/Tests/: Protocols.hs
clash-protocols-experimental/tests/Tests/Protocols/: BiDf.hs  ReqResp.hs
clash-protocols-experimental/tests/Tests/Protocols/Df/: Extra.hs
clash-protocols-experimental/tests/Tests/Protocols/Wishbone/: Extra.hs
clash-protocols/src/: Protocols.hs
clash-protocols/src/Clash/Sized/Vector/: Extra.hs
clash-protocols/src/Data/Constraint/Nat/: Extra.hs
clash-protocols/src/Data/List/: Extra.hs
clash-protocols/src/Data/Maybe/: Extra.hs
clash-protocols/src/Protocols/: BiDf.hs  Df.hs  DfConv.hs  FunctorC.hs  Hedgehog.hs  Idle.hs  Internal.hs  PacketStream.hs  ToConst.hs  Vec.hs  Wishbone.hs
clash-protocols/src/Protocols/Avalon/: MemMap.hs  Stream.hs
clash-protocols/src/Protocols/Axi4/: Common.hs  ReadAddress.hs  ReadData.hs  Stream.hs  WriteAddress.hs  WriteData.hs  WriteResponse.hs
clash-protocols/src/Protocols/Experimental/: BiDf.hs  Df.hs  DfConv.hs  FunctorC.hs  Hedgehog.hs  PacketStream.hs  ReqResp.hs  Simulate.hs  Wishbone.hs
clash-protocols/src/Protocols/Experimental/Avalon/: MemMap.hs  Stream.hs
clash-protocols/src/Protocols/Experimental/Axi4/: Common.hs  ReadAddress.hs  ReadData.hs  Stream.hs  WriteAddress.hs  WriteData.hs  WriteResponse.hs
clash-protocols/src/Protocols/Experimental/Df/: Extra.hs
clash-protocols/src/Protocols/Experimental/Hedgehog/: Internal.hs  Types.hs
clash-protocols/src/Protocols/Experimental/Simulate/: Types.hs
clash-protocols/src/Protocols/Experimental/Wishbone/: Extra.hs  Standard.hs
clash-protocols/src/Protocols/Experimental/Wishbone/Standard/: Hedgehog.hs
clash-protocols/src/Protocols/Hedgehog/: Internal.hs  Types.hs
clash-protocols/src/Protocols/Internal/: TH.hs  Types.hs
clash-protocols/src/Protocols/PacketStream/: AsyncFifo.hs  Base.hs  Converters.hs  Delay.hs  Depacketizers.hs  Hedgehog.hs  PacketFifo.hs  Packetizers.hs  Padding.hs  Routing.hs
clash-protocols/src/Protocols/Test/: Driver.hs  Run.hs  Samples.hs
clash-protocols/src/Protocols/Test/Drivers/: Df.hs
clash-protocols/src/Protocols/Test/Samples/: Vcd.hs
clash-protocols/src/Protocols/Wishbone/: Standard.hs
clash-protocols/src/Protocols/Wishbone/Standard/: Hedgehog.hs
clash-protocols/src/Test/Tasty/Hedgehog/: Extra.hs
clash-protocols/tests/: Util.hs  unittests.hs
clash-protocols/tests/Tests/: Haxioms.hs  Protocols.hs
clash-protocols/tests/Tests/Protocols/: Avalon.hs  Axi4.hs  BiDf.hs  Df.hs  DfConv.hs  PacketStream.hs  Plugin.hs  ReqResp.hs  Vec.hs  Wishbone.hs
clash-protocols/tests/Tests/Protocols/Df/: Extra.hs
clash-protocols/tests/Tests/Protocols/PacketStream/: AsyncFifo.hs  Base.hs  Converters.hs  Delay.hs  Depacketizers.hs  PacketFifo.hs  Packetizers.hs  Padding.hs  Routing.hs
clash-protocols/tests/Tests/Protocols/Wishbone/: Extra.hs
nix/: aarch64-reloc.patch  nixpkgs.nix  sources.json
src/: Protocols.hs
src/Data/Bifunctor/: Extra.hs
src/Protocols/: BiDf.hs  Cpp.hs  Df.hs  Df.hs-boot  DfConv.hs  DfLike.hs  Fifo.hs  Hedgehog.hs  Idle.hs  IdleCircuit.hs  Internal.hs  PacketStream.hs  Plugin.hs  ReqResp.hs  Wishbone.hs
src/Protocols/Avalon/: MemMap.hs  Stream.hs
src/Protocols/Avalon/MemMap/: AvalonMemMap.hs
src/Protocols/Avalon/Stream/: AvalonStream.hs
src/Protocols/Axi4/: Common.hs  ReadAddress.hs  ReadData.hs  Stream.hs  WriteAddress.hs  WriteData.hs  WriteResponse.hs
src/Protocols/Axi4/Lite/: Axi4Lite.hs
src/Protocols/Axi4/Partial/: Full.hs
src/Protocols/Axi4/Raw/: Common.hs  Full.hs
src/Protocols/Axi4/Stream/: Axi4Stream.hs
src/Protocols/Axi4/Strict/: Full.hs
src/Protocols/Df/: Lazy.hs  Simple.hs  Simple.hs-boot
src/Protocols/Df/Simple/: Lazy.hs
src/Protocols/Hedgehog/: Internal.hs
src/Protocols/Internal/: Classes.hs  TH.hs  TaggedBundle.hs  Units.hs
src/Protocols/Internal/TaggedBundle/: TH.hs
src/Protocols/Internal/Units/: TH.hs
src/Protocols/PacketStream/: AsyncFifo.hs  Base.hs  Converters.hs  Delay.hs  Depacketizers.hs  PacketFifo.hs  Packetizers.hs  Routing.hs
src/Protocols/Plugin/: Internal.hs
src/Protocols/Wishbone/: Hedgehog.hs  Standard.hs
src/Protocols/Wishbone/Standard/: Hedgehog.hs
src/Test/Tasty/Hedgehog/: Extra.hs
tests/: Util.hs  doctests.hs  tests.hs  unittests.hs
tests/Test/Tasty/Hedgehog/: Extra.hs
tests/Tests/: Protocols.hs
tests/Tests/Protocols/: Avalon.hs  AvalonMemMap.hs  Axi4.hs  Df.hs  DfConv.hs  DfLike.hs  Fifo.hs  Plugin.hs  Wishbone.hs
tests/Tests/Protocols/Df/: Simple.hs
tests/Tests/Protocols/PacketStream/: AsyncFifo.hs  Converters.hs  Delay.hs  Depacketizers.hs  PacketFifo.hs  Packetizers.hs
(+15 files in other folders)
