cabal-version:       2.4
name:                clash-protocols
synopsis:            a battery-included library for (dataflow) protocols
Homepage:            https://gitlab.com/martijnbastiaan/clash-protocols
version:             0.1
category:            Hardware
license:             BSD-2-Clause
license-file:        LICENSE
author:              Martijn Bastiaan, QBayLogic B.V.
maintainer:          Martijn Bastiaan <martijn@hmbastiaan.nl>
description:
  Suggested reading order:
  .
  * 'Protocols' + README.md
  * 'Protocols.Df'
  * 'Protocols.Plugin'
  * 'Protocols.Hedgehog'

data-files:
    src/Protocols/Hedgehog.hs
    src/Protocols/Hedgehog/*.hs

flag ci
    Description: Running on CI? Used to set fail-on-warning flag.
    Manual: True
    Default: False

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    -- NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper

  if flag(ci)
    ghc-options: -Werror

  default-language: Haskell2010
  build-depends:
    -- GHC >= 8.10
    base >= 4.14.0.0,
    Cabal,

    -- clash-prelude will set suitable version bounds for the plugins
    clash-prelude >= 1.4.0 && < 1.8,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat

custom-setup
  setup-depends:
    base          >= 4.11 && <5,
    Cabal         >= 2.4,
    cabal-doctest >= 1.0.1 && <1.1

-- library inline-circuit-notation
--   visibility: private
--   hs-source-dirs: deps/circuit-notation/src
--   build-depends:
--     , base
--     , clash-prelude >= 1.0
--     , containers
--     , data-default
--     , ghc >=8.6
--     , syb
--     , lens
--     , mtl
--     , pretty
--     , parsec
--     , pretty-show
--     , template-haskell
--   exposed-modules:
--     CircuitNotation
--   default-language: Haskell2010

library
  import: common-options
  hs-source-dirs: src
  build-depends:
      -- inline-circuit-notation
      circuit-notation
    , data-default
    , deepseq
    , extra
    , ghc >= 8.6
    , hedgehog >= 1.0.2
    , pretty-show
    , strict-tuple

    , mtl

      -- To be removed; we need 'Test.Tasty.Hedgehog.Extra' to fix upstream issues
    , tasty >= 1.2 && < 1.5
    , tasty-hedgehog >= 1.2

  exposed-modules:
    Protocols

    Protocols.Axi4.Common

    Protocols.Axi4.ReadAddress
    Protocols.Axi4.ReadData
    Protocols.Axi4.WriteAddress
    Protocols.Axi4.WriteData
    Protocols.Axi4.WriteResponse

    Protocols.Df
    -- Protocols.DfLike
    Protocols.DfLike
    Protocols.Hedgehog
    Protocols.Hedgehog.Internal
    Protocols.Internal
    Protocols.Plugin

    -- 'testProperty' is broken upstream, it reports wrong test names
    -- TODO: test / upstream ^
    Test.Tasty.Hedgehog.Extra

  autogen-modules:    Paths_clash_protocols

  other-modules:
    Data.Bifunctor.Extra
    Paths_clash_protocols

  default-language: Haskell2010

test-suite unittests
  import: common-options
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded -with-rtsopts=-N
  main-is: unittests.hs
  other-modules:
    Tests.Protocols
    Tests.Protocols.Df
    Tests.Protocols.DfLike
    Tests.Protocols.Plugin

    Util
  build-depends:
    clash-protocols,
    data-default,
    unordered-containers,
    deepseq,
    extra,
    hashable,
    hedgehog,
    tasty >= 1.2 && < 1.5,
    tasty-hedgehog >= 1.2,
    tasty-th

test-suite doctests
  import:           common-options
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          doctests.hs
  hs-source-dirs:   tests

  build-depends:
    base,
    clash-protocols,
    process,
    doctest >= 0.17 && < 0.18
